updated the home page title and text

--- a/index.html
+++ b/index.html
@@ -1,64 +1,6 @@
 ---
 layout: default
-title: Simple Alpheios Enabled Site Template
+title: My CANE Demo Home Page
 ---
 
-<p>This is a template that you can use to create a simple GitHub Pages
-website enhanced with embedded <a href="https://alpheios.net">Alpheios Reading Tools</a>.</p>
-
-<p>Sections of Latin, Greek, Arabic or Persian text can be automatically
-  enabled for double-click (Desktop)/long tap (Mobile) access from words to the Alpheios Reading Aids.</p>
-
-<p>Double-click (if on a Desktop) or tap (if on a Mobile device) on the Latin
-and Greek words in the following sections to see how it works. Then view the
-<b>Example HTML</b> to see how to mark up the text.
-Follow the instructions at <a href="getting-started.html">Getting Started</a> to
-set up your own site.
-</p>
-
-<hr>
-
-<blockquote>
-<p class="alpheios-enabled" lang="lat">
-Arma virumque canō, Trōiae quī prīmus ab ōrīs<br>
-Ītaliam, fātō profugus, Lāvīniaque vēnit<br>
-lītora, multum ille et terrīs iactātus et altō<br>
-vī superum saevae memorem Iūnōnis ob īram;<br>
-</p>
-</blockquote>
-
-<details>
-   <summary>Example HTML</summary>
-   <textarea rows="7" cols="75">
-<p class="alpheios-enabled" lang="lat">
-Arma virumque canō, Trōiae quī prīmus ab ōrīs<br>
-Ītaliam, fātō profugus, Lāvīniaque vēnit<br>
-lītora, multum ille et terrīs iactātus et altō<br>
-vī superum saevae memorem Iūnōnis ob īram<br>
-</p>
-   </textarea>
-</details>
-
-<blockquote>
-<p class="alpheios-enabled" lang="grc">
-ἄνδρα μοι ἔννεπε , μοῦσα , πολύτροπον , ὃς μάλα πολλὰ<br>
-πλάγχθη , ἐπεὶ Τροίης ἱερὸν πτολίεθρον ἔπερσεν:<br>
-πολλῶν δ᾽ ἀνθρώπων ἴδεν ἄστεα καὶ νόον ἔγνω,<br>
-πολλὰ δ᾽ ὅ γ᾽ ἐν πόντῳ πάθεν ἄλγεα ὃν κατὰ θυμόν,<br>
-ἀρνύμενος ἥν τε ψυχὴν καὶ νόστον ἑταίρων.<br>
-</p>
-</blockquote>
-
-<details>
-   <summary>Example HTML</summary>
-   <textarea rows="8" cols="75">
-<p class="alpheios-enabled" lang="grc">
-ἄνδρα μοι ἔννεπε , μοῦσα , πολύτροπον , ὃς μάλα πολλὰ<br>
-πλάγχθη , ἐπεὶ Τροίης ἱερὸν πτολίεθρον ἔπερσεν:<br>
-πολλῶν δ᾽ ἀνθρώπων ἴδεν ἄστεα καὶ νόον ἔγνω,<br>
-πολλὰ δ᾽ ὅ γ᾽ ἐν πόντῳ πάθεν ἄλγεα ὃν κατὰ θυμόν,<br>
-ἀρνύμενος ἥν τε ψυχὴν καὶ νόστον ἑταίρων.<br>
-</p>
-    </textarea>
-</details>
-
+Veni vidi vici
