adding some instruction.

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 layout: default
 title: My CANE Demo Home Page
 ---
+<p lang="eng">Double-click on a word to access Alpheios reading aids.</p>
 
 <p class="alpheios-enabled" lang="lat">Veni vidi vici</p>
