using the latin

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-layout: default
+layout: latin
 title: My CANE Demo Home Page
 ---
-<p lang="eng">Double-click on a word to access Alpheios reading aids.</p>
-
-<p class="alpheios-enabled" lang="lat">Veni vidi vici</p>
+<p>Veni vidi vici</p>
